[gd_scene load_steps=5 format=3 uid="uid://cj9vm5n8k2pqt"]

[ext_resource type="PackedScene" path="res://engine/stage/Stage2_5D.tscn" id="1_stage_2_5d"]
[ext_resource type="PackedScene" path="res://scenes/characters/Character.tscn" id="2_character"]
[ext_resource type="Script" path="res://tests/Demo2DHDScene.gd" id="3_demo_script"]

[sub_resource type="Environment" id="Environment_1"]
background_mode = 1
background_color = Color(0.1, 0.1, 0.2, 1)
ambient_light_color = Color(0.8, 0.9, 1, 1)
ambient_light_energy = 0.3

[node name="Demo2DHDScene" type="Node2D"]
script = ExtResource("3_demo_script")

[node name="Stage2_5D" parent="." instance=ExtResource("1_stage_2_5d")]
stage_id = "demo_stage"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -100)
zoom = Vector2(0.8, 0.8)

[node name="Player1" parent="." instance=ExtResource("2_character")]
position = Vector2(-200, 0)
CharacterId = "ryu"
PlayerId = 1

[node name="Player2" parent="." instance=ExtResource("2_character")]
position = Vector2(200, 0)
CharacterId = "chun_li"
PlayerId = 2

[node name="UI" type="CanvasLayer" parent="."]

[node name="Instructions" type="RichTextLabel" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -150.0
offset_right = 600.0
offset_bottom = -20.0
bbcode_enabled = true
text = "[b]2D-HD Rendering Engine Demo[/b]

[color=yellow]Controls:[/color]
• [color=cyan]1[/color] - Switch to LOW quality
• [color=cyan]2[/color] - Switch to MED quality  
• [color=cyan]3[/color] - Switch to HIGH quality
• [color=cyan]4[/color] - Switch to ULTRA quality
• [color=cyan]Q[/color] - Toggle Mode-7 floor
• [color=cyan]W[/color] - Toggle parallax background
• [color=cyan]E[/color] - Toggle lighting effects
• [color=cyan]R[/color] - Toggle post-processing
• [color=cyan]Space[/color] - Random palette swap
• [color=cyan]Tab[/color] - Performance stats

[color=green]Current Quality:[/color] MED
[color=green]FPS:[/color] 60 target"

[node name="PerformanceLabel" type="Label" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 200.0
text = "Performance Stats:
FPS: 60
Memory: 256MB
Quality: MED"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1")